Bug 415772, use XMLHttpRequest to load xml datasources, r=smaug,sr=peterv