content/xul/templates/src/nsXULTemplateQueryProcessorXML.h
@@ -52,6 +52,7 @@
 #include "nsIDOMXPathResult.h"
 #include "nsXMLBinding.h"
 #include "nsCycleCollectionParticipant.h"
+#include "nsIXMLHttpRequest.h"
 
 class nsXULTemplateQueryProcessorXML;
 
@@ -185,6 +186,8 @@ private:
     nsCOMPtr<nsIDOMXPathEvaluator> mEvaluator;
 
     nsCOMPtr<nsIXULTemplateBuilder> mTemplateBuilder;
+
+    nsCOMPtr<nsIXMLHttpRequest> mRequest;
 };
 
 
